--- a/pagina_destino.html
+++ b/pagina_destino.html
@@ -28,6 +28,6 @@
 <body>
     <h1>¡Estoy orgullosa de ti, amorcito! <br> Tú puedes corazón<br>No te desanimes mi amor </h1>
     <img src="https://i.pinimg.com/originals/7f/9e/20/7f9e2048d80751987ec1101fd7142c3e.gif" alt="https://i.pinimg.com/originals/7f/9e/20/7f9e2048d80751987ec1101fd7142c3e.gif">
-<h1><br> No importa que pase yo siempre estaré orgullosa de ti mi niño hermoso</h1>
+<h1><br> No importa que pase yo siempre estaré orgullosa de ti mi niño hermoso<br> te amo con toda mi alma amor de mi vida</h1>
 </body>
 </html>
